# Voice-Assistant-Cry

./: .gitignore  AGENTS.md  CHANGELOG.md  CryAssistant.spec  LICENSE  README.md  diagnose.py  docs.md  install.bat  main.py  pyproject.toml  requirements.structure.txt  requirements.txt  run_assistant.bat  run_diagnostics.bat  run_settings.bat  ui.py
.agents/: README.md  commands-skills-engineer.md  docs-support-engineer.md  packaging-release-engineer.md  product-lead.md  qa-diagnostics-engineer.md  runtime-engineer.md  safety-privacy-engineer.md  ux-ui-designer.md
.tmp/docx_ascii/: moy_otchetik.docx
data/: commands.yaml  config.yaml  notes.txt
docs/: .gitignore  AI_AGENTS.md  ARCHITECTURE.md  COMMANDS.md  CONFIG.md  DEVELOPMENT.md  PACKAGING.md  README.md  ROADMAP.md  SCREENSHOTS.md  TROUBLESHOOTING.md  USER_GUIDE.md  instalations.md  МОЙ ОТЧЕТИК.docx  ОТЧЕТ.docx
installer/: CryAssistant.iss
src/core/: autostart.py  config.py  console.py  executor.py  logging_setup.py  logs.py  matcher.py  recognizer.py  reminder_scheduler.py  runtime_control.py  safety.py  skill_manager.py  storage.py  support.py  tts.py
src/skills/: __init__.py  ai_skill.py  apps.py  assistant_control.py  assistant_info.py  history.py  logs.py  music.py  news.py  notes.py  reminder.py  rutube.py  search_web.py  system.py  (+6 more)
tests/: test_ai_skill.py  test_apps_skill.py  test_core_p0.py  test_diagnostics_apps.py  test_news_skill.py  test_reminder_skill.py  test_rutube_skill.py  test_support.py  test_system_power.py
tools/: build_exe.ps1  build_installer.ps1  prepare_release_data.py
(+6 files in other folders)
